[package]
name = "bbwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
byteorder = "1.5.0"
lexopt = "0.3.0"
num = "0.4.2"
num-traits = "0.2.18"
seq_io = "0.3.2"

[build-dependencies]
cc = "*"


